Print Preview: Prevent tool tip showing on hide

Hide the preview dialog before sending the message to start the system
dialog so that the tool tip does not appear.

Bug: 748437
Change-Id: I2b22076fc0ab98c680345ee03b931cbf117e5b60